[project]
name = "pdbcluster"
version = "0.1.0"
description = "Sequence and structure clustering pipeline for PDB/mmCIF files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biotite>=1.0",
    "rich>=13.7",
    "scipy>=1.11",
    "typer>=0.12",
]

[project.scripts]
pdbcluster = "pdbcluster.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdbcluster"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

